* Added mini backtrace to every `called from` information display! * Made text-only trace more verbose * Added open-in-new-window functionality to everywhere callee info is displayed (thus traces and non-collapsed elements can be extracted) * Windows opened from kint have an input at the top to optionally make notes and whatnot * Minor fixes

--- a/view/less/_kint.less
+++ b/view/less/_kint.less
@@ -66,12 +66,6 @@
     background     : @caret-image no-repeat scroll 0 0 transparent;
   }
 
-  dt.kint-parent span.kint-popup-trigger {
-    float: right !important;
-    cursor: pointer;
-    font-size: 15pt;
-  }
-
   dt.kint-parent:hover nav {
     background-position : 0 -15px;
   }
@@ -123,9 +117,60 @@
     word-break : normal;
   }
 
+  li {
+    list-style: none;
+  }
+
+  .kint-popup-trigger {
+    float  : right !important;
+    cursor : pointer;
+    color  : @border-color-hover;
+
+    &:hover {
+      color : @border-color;
+    }
+  }
+
+  dt.kint-parent > .kint-popup-trigger {
+    font-size : 15pt;
+  }
+
   footer {
     padding   : 0 3px 3px;
-    font-size : .7em
+    font-size : .7em;
+
+    > .kint-popup-trigger {
+      font-size: 12px;
+    }
+
+    nav {
+      background-size : 10px;
+      height          : 10px;
+      width           : 10px;
+
+      &:hover {
+        background-position : 0 -10px;
+      }
+    }
+
+    > ol {
+      display     : none;
+      margin-left : 32px;
+    }
+
+    &.kint-show {
+      > ol {
+        display: block;
+      }
+
+      nav {
+        background-position: 0 -20px;
+
+        &:hover {
+          background-position: 0 -30px;
+        }
+      }
+    }
   }
 
   a {
